<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/mActivity_padding"
    android:paddingRight="@dimen/mActivity_padding"
    android:paddingTop="@dimen/activity_vertical_margin"
    >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/basketball_logo"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_top_36" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_36"
        android:background="@color/LinearLayoutColor"
        android:orientation="horizontal"
        android:padding="4dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_phone_iphone_black_24dp" />

        <EditText
            android:id="@+id/et_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/please_input_your_phone_number"
            android:inputType="number"
            android:maxLength="11"
            android:padding="8dp"
            android:textColorHint="@color/color_gray" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/LinearLayoutColor"
        android:orientation="horizontal"
        android:padding="4dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_verified_user_black_24dp" />

        <EditText
            android:id="@+id/et_verifyCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/please_input_verify_code"
            android:inputType="number"
            android:maxLength="11"
            android:padding="8dp"
            android:textColorHint="@color/color_gray" />

        <TextView
            android:id="@+id/tv_get_verify_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.8"
            android:padding="8dp"
            android:text="@string/get_verify_code"
            android:textColor="@android:color/background_dark"
            android:textSize="16sp" />
    </LinearLayout>
   <!-- <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/LinearLayoutColor"
        android:orientation="horizontal"
        android:padding="4dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_lock_black_36px" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/please_input_your_password"
            android:inputType="textPassword"
            android:maxLength="11"
            android:padding="8dp"
            android:textColorHint="@color/mTextHintColor" />

    </LinearLayout>
-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/LinearLayoutColor"
        android:orientation="horizontal"
        android:padding="4dp" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_lock_black_36px" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/please_input_your_password"
            android:inputType="textPassword"
            android:maxLength="11"
            android:padding="8dp"
            android:textColorHint="@color/color_gray" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:drawableLeft="@drawable/ic_event_available_black_24dp"
        android:text="@string/sign_in_present_you_agree_us"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/mActivity_padding"
        android:background="@color/colorAccent"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/Sign_in"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        />

    <TextView
        android:id="@+id/tv_go_Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="8dp"
        android:text="@string/have_account_go_login"
        android:textColor="@android:color/white" />
</LinearLayout>

