<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:paddingBottom="@dimen/mActivity_padding"
    android:paddingLeft="@dimen/mActivity_padding"
    android:paddingRight="@dimen/mActivity_padding"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ImageView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:id="@+id/icon"
        android:src="@drawable/basketball_logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:id="@+id/linear_number"
        android:layout_below="@+id/icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_36"
        android:background="@color/LinearLayoutColor"
        android:orientation="horizontal"
        android:padding="4dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_person_black_24dp" />

        <EditText
            android:id="@+id/et_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/please_input_your_phone_number"
            android:inputType="number"
            android:maxLength="11"
            android:padding="8dp"
            android:textColorHint="@color/color_gray" />
    </LinearLayout>

    <LinearLayout
        android:layout_below="@+id/linear_number"
        android:id="@+id/linear_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/LinearLayoutColor"
        android:orientation="horizontal"
        android:padding="4dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_lock_black_36px" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/please_input_your_password"
            android:inputType="textPassword"
            android:maxLength="11"
            android:padding="8dp"
            android:textColorHint="@color/color_gray" />
    </LinearLayout>


    <Button
        android:layout_below="@+id/linear_password"
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/mActivity_padding"
        android:background="@color/colorAccent"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/Login_in"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        />
    <RelativeLayout
        android:id="@+id/relativeLayout_"
        android:layout_below="@id/btn_login"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_go_Sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/go_sign_in"
            android:textColor="@android:color/white"
            android:textSize="14sp"

            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
        <TextView
            android:id="@+id/forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>



    <!--  <LinearLayout
          android:layout_marginTop="@dimen/mActivity_padding"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">

          <View
              android:layout_width="0dp"
              android:layout_height="1dp"
              android:layout_gravity="center"
              android:layout_weight="0.5"
              android:background="@color/white_text_color">

          </View>

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:text="第三方帐号登录"
              android:textColor="@color/white_text_color" />

          <View
              android:layout_width="0dp"
              android:layout_height="1dp"
              android:layout_gravity="center"
              android:layout_weight="0.5"
              android:background="@color/white_text_color">
          </View>

      </LinearLayout>-->

   <!-- <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_marginRight="36dp"
        android:layout_marginLeft="36dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_qq"
            android:layout_width="0dp"
            android:layout_height="@dimen/mIconWidth"
            android:src="@drawable/qq"
            android:layout_weight="1"/>

        <ImageView
            android:id="@+id/iv_we_chat"
            android:layout_width="0dp"
            android:layout_height="@dimen/mIconWidth"
            android:src="@drawable/wechat"
            android:layout_weight="1"/>

        <ImageView
            android:id="@+id/iv_wei_bo"
            android:layout_width="0dp"
            android:layout_height="@dimen/mIconWidth"
            android:src="@drawable/xinlang"
            android:layout_weight="1"/>

    </LinearLayout>-->

</RelativeLayout>
